--- a/style.css
+++ b/style.css
@@ -103,4 +103,17 @@ input[type="radio"]:checked{
     background-color: var(--rcolor);
  }
 
- 
+ .mov{
+    height: 200px;
+    width: 150px;
+ }
+ img{
+    height: 100%;
+    width: 100%;
+ }
+ article{
+    padding: 20px;
+    border: 3px solid var(--bc);
+    display: flex;
+    flex-wrap: wrap;
+ }
